fix overlapping sections

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -9,7 +9,7 @@
     scroll-padding-top: var(--scroll-margin, 80px);
     font-family: "Raleway", sans-serif;
     max-width: 100vw;
-    transition: all 2s;
+    transition: background-color 2s ease-in;
   }
 
   * {
@@ -32,7 +32,6 @@
     flex justify-center items-center;
     width: calc(100% - 0rem);
     min-height: 100vh;
-    height: 100vh;
     margin-inline: auto;
   }
 
